syntax = "proto3";

package chat;

option go_package = "/chat";

import "google/protobuf/empty.proto";

message User {
  string host = 1;
  string name = 2;
  string password = 3;
}

message LoginRes {
  string token = 1;
}

message UserResponse {
  string name = 1;
}

message ListUsersRes {
  repeated UserResponse users = 1;
}

message ListGroupsRes {
  repeated string groups = 1;
}

message CreateGroupReq {
  string name = 1;
  string password = 2;
  repeated string users = 3;
}

message JoinReq {
  string name = 1;
  string user = 2;
}

message JoinRes {
  string message = 1;
}

message LeaveGroup {
  string token = 1;
}

message CreateResponse {
  string message = 1;
}

message Shutdown {}

message Message {
  string username = 1;
  string message = 2;
}

service Broadcast {
  rpc Stream(stream Message) returns (stream Message);
  rpc CreateGroup(CreateGroupReq) returns (CreateResponse);
  rpc JoinGroup(JoinReq) returns (JoinRes);
  rpc Login(User) returns (LoginRes);
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersRes);
  rpc ListGroups(google.protobuf.Empty) returns (ListGroupsRes);
}



